# deepstream.hpp

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: setup_user.sh
.github/workflows/: ci.yml
cmake/: clang_tidy.cmake  compiler_warnings.cmake  coverage.cmake  deepstream-hpp-config.cmake.in  sanitizers.cmake
cmake/Modules/: FindDeepStream.cmake  FindGStreamer.cmake
docs/: api-reference.md  concepts-roadmap.md  description.md  dev-environment.md  requirements.md  roadmap.md  summary.md  tutorials.md
examples/: CMakeLists.txt
examples/deepstream-app/: CMakeLists.txt
include/: CMakeLists.txt  builder.hpp  deepstream.hpp  deepstream_raii.hpp  elements.hpp  gstreamer.hpp  gstreamer_raii.hpp  metadata.hpp  pipeline.hpp
include/core/: array_proxy.hpp  concepts.hpp  core.hpp  enums.hpp  flags.hpp  handle.hpp
include/elements/: auxiliary.hpp  detail.hpp  encode.hpp  inference.hpp  messaging.hpp  sinks.hpp  smart_record.hpp  sources.hpp  tracking.hpp  transformations.hpp
include/metadata/: batch_meta.hpp  classifier_meta.hpp  frame_meta.hpp  meta_list_view.hpp  object_meta.hpp  tensor_meta.hpp  user_meta.hpp
include/utils/: debug.hpp  error.hpp
scripts/: check-concepts.sh
tests/: CMakeLists.txt  testBuilder.cpp  testConcepts.cpp  testCore.cpp  testDebug.cpp  testElements.cpp  testGstreamer.cpp  testGstreamerRaii.cpp  testMetadata.cpp  testPipeline.cpp
tutorials/: CMakeLists.txt  README.md
tutorials/easy/: CMakeLists.txt  README.md
tutorials/easy/AudioPlayer/: CMakeLists.txt  README.md  main.cpp  main_declarative.cpp  main_dynamic.cpp  main_raii.cpp  main_view.cpp
tutorials/easy/CapsAndFilters/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/easy/ElementByHand/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/easy/HelloWorld/: CMakeLists.txt  README.md  elements.cpp  main.cpp  main_raii.cpp  main_view.cpp
tutorials/easy/PipelineBuilder/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp
tutorials/easy/StatesAndSeeking/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/easy/VideoFilePlayer/: CMakeLists.txt  README.md  main copy.cpp  main.cpp  main_declarative.cpp  main_dynamic.cpp  main_raii.cpp  main_view.cpp
tutorials/easy/WebcamViewer/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp
tutorials/gstreamer00/: CMakeLists.txt  gstreamer.hpp  gstreamer00.cpp
tutorials/gstreamer01/: CMakeLists.txt  gstreamer01.cpp
tutorials/medium/: CMakeLists.txt  README.md
tutorials/medium/BuffersAndMemory/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/medium/CPUVideoProcessing/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/medium/ClocksAndSync/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/medium/DynamicPipeline/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/medium/EventsAndQueries/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/medium/ImageCapture/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/medium/PipelineInspector/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp
tutorials/medium/RTSPClient/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/medium/TagsAndMetadata/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_view.cpp
tutorials/medium/VideoRecorder/: CMakeLists.txt  README.md  main.cpp  main_raii.cpp  main_webcam.cpp
