# ${CMAKE_SOURCE_DIR}/tutorials/easy/CMakeLists.txt
add_subdirectory(HelloWorld)
add_subdirectory(VideoFilePlayer)

add_subdirectory(AudioPlayer)
add_subdirectory(WebcamViewer)
add_subdirectory(PipelineBuilder)
add_subdirectory(ElementByHand)
add_subdirectory(StatesAndSeeking)
add_subdirectory(CapsAndFilters)
