add_subdirectory(VideoRecorder)
add_subdirectory(RTSPClient)
add_subdirectory(CPUVideoProcessing)
add_subdirectory(ImageCapture)
add_subdirectory(PipelineInspector)
add_subdirectory(BuffersAndMemory)
add_subdirectory(EventsAndQueries)
add_subdirectory(ClocksAndSync)
add_subdirectory(TagsAndMetadata)
add_subdirectory(DynamicPipeline)
